Modular carousel. API Integration & More

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -28,7 +28,8 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
+                        <span class="fa font-weight-bold text-white fa-shopping-cart d-none d-sm-block"></span>
+                        <span class="d-block d-sm-none">Chart</span>
                     </a>
                 </li>
                 <li class="nav-item">
