--- a/public/profile/account/scss/index.scss
+++ b/public/profile/account/scss/index.scss
@@ -1,9 +1,17 @@
+@import '../../../../node_modules/bootstrap/scss/functions';
+@import "../../../../node_modules/bootstrap/scss/variables";
+@import "../../../../node_modules/bootstrap/scss/mixins/breakpoints";
+
 $header-section-height: 10rem;
 
 .container-fluid.header {
-  height: $header-section-height;
-  margin-top: 60px;
 
+  @include media-breakpoint-up(lg) {
+    height: 10rem;
+  }
+
+
+  margin-top: 60px;
   background: #0d71b9; /* Old browsers */
   background: -moz-linear-gradient(left, #0d71b9 0%, #05ab9e 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(left, #0d71b9 0%,#05ab9e 100%); /* Chrome10-25,Safari5.1-6 */
