--- a/public/scss/booboky-colors.scss
+++ b/public/scss/booboky-colors.scss
@@ -1,3 +1,5 @@
 $bobooky-dark : #21263F;
 $bobooky-primary: #0D71B9;
 $bobooky-secondary: #05AB9E;
+$bobooky-warning: #F7BC5D;
+$bobooky-danger: #AD2528;
