--- a/public/scss/index/index.scss
+++ b/public/scss/index/index.scss
@@ -73,11 +73,20 @@
 
 .search-bar .form-control {
   border-right: hidden;
-
+  outline: none !important;
+  box-shadow: none !important;
 }
+
 .search-bar .btn {
   border: 1px solid $light;
   border-left: hidden;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.form-control:focus {
+  box-shadow: white;
+  border-color: white;
 }
 
 .carousel-control.left {
