--- a/public/scss/components/carousel.css
+++ b/public/scss/components/carousel.css
@@ -1,7 +1,7 @@
 .multi-item-carousel .book .card-img-top {
   width: 100%;
   height: 50rem;
-  object-fit: cover;
+  object-fit: contain;
 }
 @media (min-width: 768px) {
   .multi-item-carousel .book .card-img-top {
