--- a/public/scss/components/carousel.scss
+++ b/public/scss/components/carousel.scss
@@ -7,6 +7,7 @@ $ci: ".carousel-item";
 $items: 4;
 
 #{$component-name} .book {
+
 }
 
 #{$component-name} .book .card-img-top {
@@ -15,8 +16,7 @@ $items: 4;
     height: 20rem;
   }
   height: 50rem;
-  object-fit: cover;
-
+  object-fit: contain;
 }
 
 @function gen-active() {
