--- a/public/components/profile-header/profile-header.scss
+++ b/public/components/profile-header/profile-header.scss
@@ -9,7 +9,7 @@ $header-section-height: 10rem;
 .container-fluid.header {
 
   @include media-breakpoint-up(lg) {
-    height: 10rem;
+    //height: 10rem;
   }
   background: $bobooky-primary; /* Old browsers */
   background: -moz-linear-gradient(left, $bobooky-primary 0%, $bobooky-secondary 100%); /* FF3.6-15 */
