--- a/public/profile/account/scss/index.css
+++ b/public/profile/account/scss/index.css
@@ -1,13 +1,8 @@
 .main {
-  font-size: 18pt;
-}
+  font-size: 18pt; }
 
 .navbar {
-  background: #21263F;
-}
+  background: #21263F; }
 
 .profile-header-placeholder {
-  margin-top: 55px;
-}
-
-/*# sourceMappingURL=index.css.map */
+  margin-top: 55px; }
