--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <!-- NAVBAR -->
-<div class="fixed-top">
+<div class="">
     <nav class="navbar navbar-expand-lg navbar-dark unscrolled">
         <div class="container">
             <a class="navbar-brand" href="/">
@@ -104,9 +104,9 @@
                         <div class="col-12 col-lg-4 d-flex flex-column justify-content-center">
                             <div class="container p-0 ">
                                 <h3 class="text-white">
-                                    Hi Luna Alessia!
+                                    Hi <span id="username"></span>!
                                 </h3>
-                                <button type="button" class="btn btn-dark rounded-pill">
+                                <button type="button" class="btn btn-dark rounded-pill logout" >
                                     Logout
                                 </button>
                                 <hr class="style1 border-white d-lg-none d-block">
@@ -128,7 +128,7 @@
                                         <a href="#" class="text-white">My reviews</a>
                                     </div>
                                     <div class="col-12 col-lg py-1 py-lg-0 d-block d-lg-none">
-                                        <a href="#" class="text-white">
+                                        <a href="#" class="text-white logout">
                                             <span class="badge badge-pill badge-dark py-2 px-3 float-right">Logout</span>
                                         </a>
                                     </div>
