--- a/public/scss/bobooky-theme.scss
+++ b/public/scss/bobooky-theme.scss
@@ -5,6 +5,10 @@ $theme-colors: (
         "primary" : $bobooky-primary,
         "secondary" : $bobooky-secondary,
         "warning" : $bobooky-warning,
+        "orange" : $bobooky-orange,
+        "danger" : $bobooky-danger,
+        "pink" : $bobooky-pink,
+        "purple" : $bobooky-purple
         "yellow" : $bobooky-warning,
         "white" : white
 );
