--- a/public/scss/booboky-colors.scss
+++ b/public/scss/booboky-colors.scss
@@ -2,4 +2,7 @@ $bobooky-dark : #21263F;
 $bobooky-primary: #0D71B9;
 $bobooky-secondary: #05AB9E;
 $bobooky-warning: #F7BC5D;
+$bobooky-orange: #F39325;
 $bobooky-danger: #AD2528;
+$bobooky-pink: #E83273;
+$bobooky-purple: #8E3089;
