--- a/public/profile/register/scss/calendar.css
+++ b/public/profile/register/scss/calendar.css
@@ -14,80 +14,99 @@
   border-radius: 4px;
   direction: ltr;
   /*.dow {
-		border-top: 1px solid #ddd !important;
-	}*/ }
+  	border-top: 1px solid #ddd !important;
+  }*/
+}
 
 .datepicker-inline {
-  width: 220px; }
+  width: 220px;
+}
 
 .datepicker.datepicker-rtl {
-  direction: rtl; }
+  direction: rtl;
+}
 
 .datepicker.datepicker-rtl table tr td span {
-  float: right; }
+  float: right;
+}
 
 .datepicker-dropdown {
   top: 0;
-  left: 0; }
+  left: 0;
+}
 
 .datepicker-dropdown:before {
-  content: '';
+  content: "";
   display: inline-block;
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-bottom: 7px solid #ccc;
   border-top: 0;
   border-bottom-color: rgba(0, 0, 0, 0.2);
-  position: absolute; }
+  position: absolute;
+}
 
 .datepicker-dropdown:after {
-  content: '';
+  content: "";
   display: inline-block;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 6px solid #ffffff;
   border-top: 0;
-  position: absolute; }
+  position: absolute;
+}
 
 .datepicker-dropdown.datepicker-orient-left:before {
-  left: 6px; }
+  left: 6px;
+}
 
 .datepicker-dropdown.datepicker-orient-left:after {
-  left: 7px; }
+  left: 7px;
+}
 
 .datepicker-dropdown.datepicker-orient-right:before {
-  right: 6px; }
+  right: 6px;
+}
 
 .datepicker-dropdown.datepicker-orient-right:after {
-  right: 7px; }
+  right: 7px;
+}
 
 .datepicker-dropdown.datepicker-orient-top:before {
-  top: -7px; }
+  top: -7px;
+}
 
 .datepicker-dropdown.datepicker-orient-top:after {
-  top: -6px; }
+  top: -6px;
+}
 
 .datepicker-dropdown.datepicker-orient-bottom:before {
   bottom: -7px;
   border-bottom: 0;
-  border-top: 7px solid #999; }
+  border-top: 7px solid #999;
+}
 
 .datepicker-dropdown.datepicker-orient-bottom:after {
   bottom: -6px;
   border-bottom: 0;
-  border-top: 6px solid #ffffff; }
+  border-top: 6px solid #ffffff;
+}
 
 .datepicker > div {
-  display: none; }
+  display: none;
+}
 
 .datepicker.days div.datepicker-days {
-  display: block; }
+  display: block;
+}
 
 .datepicker.months div.datepicker-months {
-  display: block; }
+  display: block;
+}
 
 .datepicker.years div.datepicker-years {
-  display: block; }
+  display: block;
+}
 
 .datepicker table {
   margin: 0;
@@ -96,7 +115,8 @@
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+}
 
 .datepicker td,
 .datepicker th {
@@ -106,26 +126,31 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  border: none; }
+  border: none;
+}
 
 .table-striped .datepicker table tr td,
 .table-striped .datepicker table tr th {
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 .datepicker table tr td.day:hover,
 .datepicker table tr td.day.focused {
   background: #eeeeee;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .datepicker table tr td.old,
 .datepicker table tr td.new {
-  color: #999999; }
+  color: #999999;
+}
 
 .datepicker table tr td.disabled,
 .datepicker table tr td.disabled:hover {
   background: none;
   color: #999999;
-  cursor: default; }
+  cursor: default;
+}
 
 .datepicker table tr td.today,
 .datepicker table tr td.today:hover,
@@ -139,11 +164,12 @@
   background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);
   background-image: linear-gradient(top, #fdd49a, #fdf59a);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdd49a', endColorstr='#fdf59a', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fdd49a", endColorstr="#fdf59a", GradientType=0);
   border-color: #fdf59a #fdf59a #fbed50;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-  color: #000; }
+  color: #000;
+}
 
 .datepicker table tr td.today:hover,
 .datepicker table tr td.today:hover:hover,
@@ -165,7 +191,8 @@
 .datepicker table tr td.today:hover[disabled],
 .datepicker table tr td.today.disabled[disabled],
 .datepicker table tr td.today.disabled:hover[disabled] {
-  background-color: #fdf59a; }
+  background-color: #fdf59a;
+}
 
 .datepicker table tr td.today:active,
 .datepicker table tr td.today:hover:active,
@@ -175,13 +202,16 @@
 .datepicker table tr td.today:hover.active,
 .datepicker table tr td.today.disabled.active,
 .datepicker table tr td.today.disabled:hover.active {
-  background-color: #fbf069 \9; }
+  background-color: #fbf069 \9 ;
+}
 
 .datepicker table tr td.today:hover:hover {
-  color: #000; }
+  color: #000;
+}
 
 .datepicker table tr td.today.active:hover {
-  color: #fff; }
+  color: #fff;
+}
 
 .datepicker table tr td.range,
 .datepicker table tr td.range:hover,
@@ -190,7 +220,8 @@
   background: #eeeeee;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 0; }
+  border-radius: 0;
+}
 
 .datepicker table tr td.range.today,
 .datepicker table tr td.range.today:hover,
@@ -204,13 +235,14 @@
   background-image: -o-linear-gradient(top, #f3c17a, #f3e97a);
   background-image: linear-gradient(top, #f3c17a, #f3e97a);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3c17a', endColorstr='#f3e97a', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f3c17a", endColorstr="#f3e97a", GradientType=0);
   border-color: #f3e97a #f3e97a #edde34;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 0; }
+  border-radius: 0;
+}
 
 .datepicker table tr td.range.today:hover,
 .datepicker table tr td.range.today:hover:hover,
@@ -232,7 +264,8 @@
 .datepicker table tr td.range.today:hover[disabled],
 .datepicker table tr td.range.today.disabled[disabled],
 .datepicker table tr td.range.today.disabled:hover[disabled] {
-  background-color: #f3e97a; }
+  background-color: #f3e97a;
+}
 
 .datepicker table tr td.range.today:active,
 .datepicker table tr td.range.today:hover:active,
@@ -242,7 +275,8 @@
 .datepicker table tr td.range.today:hover.active,
 .datepicker table tr td.range.today.disabled.active,
 .datepicker table tr td.range.today.disabled:hover.active {
-  background-color: #efe24b \9; }
+  background-color: #efe24b \9 ;
+}
 
 .datepicker table tr td.selected,
 .datepicker table tr td.selected:hover,
@@ -256,12 +290,13 @@
   background-image: -o-linear-gradient(top, #b3b3b3, #808080);
   background-image: linear-gradient(top, #b3b3b3, #808080);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3b3b3', endColorstr='#808080', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b3b3b3", endColorstr="#808080", GradientType=0);
   border-color: #808080 #808080 #595959;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
 
 .datepicker table tr td.selected:hover,
 .datepicker table tr td.selected:hover:hover,
@@ -283,7 +318,8 @@
 .datepicker table tr td.selected:hover[disabled],
 .datepicker table tr td.selected.disabled[disabled],
 .datepicker table tr td.selected.disabled:hover[disabled] {
-  background-color: #808080; }
+  background-color: #808080;
+}
 
 .datepicker table tr td.selected:active,
 .datepicker table tr td.selected:hover:active,
@@ -293,7 +329,8 @@
 .datepicker table tr td.selected:hover.active,
 .datepicker table tr td.selected.disabled.active,
 .datepicker table tr td.selected.disabled:hover.active {
-  background-color: #666666 \9; }
+  background-color: #666666 \9 ;
+}
 
 .datepicker table tr td.active,
 .datepicker table tr td.active:hover,
@@ -307,12 +344,13 @@
   background-image: -o-linear-gradient(top, #F7BC5D, #F39325);
   background-image: linear-gradient(top, #F7BC5D, #F39325);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0088cc", endColorstr="#0044cc", GradientType=0);
   border-color: #F7BC5D #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #21263F;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
 
 .datepicker table tr td.active:hover,
 .datepicker table tr td.active:hover:hover,
@@ -334,7 +372,8 @@
 .datepicker table tr td.active:hover[disabled],
 .datepicker table tr td.active.disabled[disabled],
 .datepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #0044cc; }
+  background-color: #0044cc;
+}
 
 .datepicker table tr td.active:active,
 .datepicker table tr td.active:hover:active,
@@ -344,7 +383,8 @@
 .datepicker table tr td.active:hover.active,
 .datepicker table tr td.active.disabled.active,
 .datepicker table tr td.active.disabled:hover.active {
-  background-color: #003399 \9; }
+  background-color: #003399 \9 ;
+}
 
 .datepicker table tr td span {
   display: block;
@@ -356,16 +396,19 @@
   cursor: pointer;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  border-radius: 4px; }
+  border-radius: 4px;
+}
 
 .datepicker table tr td span:hover {
-  background: #eeeeee; }
+  background: #eeeeee;
+}
 
 .datepicker table tr td span.disabled,
 .datepicker table tr td span.disabled:hover {
   background: none;
   color: #999999;
-  cursor: default; }
+  cursor: default;
+}
 
 .datepicker table tr td span.active,
 .datepicker table tr td span.active:hover,
@@ -379,12 +422,13 @@
   background-image: -o-linear-gradient(top, #F7BC5D, #F39325);
   background-image: linear-gradient(top, #F7BC5D, #F39325);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0088cc", endColorstr="#0044cc", GradientType=0);
   border-color: #0044cc #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
 
 .datepicker table tr td span.active:hover,
 .datepicker table tr td span.active:hover:hover,
@@ -406,7 +450,8 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #F7BC5D; }
+  background-color: #F7BC5D;
+}
 
 .datepicker table tr td span.active:active,
 .datepicker table tr td span.active:hover:active,
@@ -416,51 +461,62 @@
 .datepicker table tr td span.active:hover.active,
 .datepicker table tr td span.active.disabled.active,
 .datepicker table tr td span.active.disabled:hover.active {
-  background-color: #F7BC5D \9; }
+  background-color: #F7BC5D \9 ;
+}
 
 .datepicker table tr td span.old,
 .datepicker table tr td span.new {
-  color: #999999; }
+  color: #999999;
+}
 
 .datepicker th.datepicker-switch {
-  width: 145px; }
+  width: 145px;
+}
 
 .datepicker thead tr:first-child th,
 .datepicker tfoot tr th {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .datepicker thead tr:first-child th:hover,
 .datepicker tfoot tr th:hover {
-  background: #eeeeee; }
+  background: #eeeeee;
+}
 
 .datepicker .cw {
   font-size: 10px;
   width: 12px;
   padding: 0 2px 0 5px;
-  vertical-align: middle; }
+  vertical-align: middle;
+}
 
 .datepicker thead tr:first-child th.cw {
   cursor: default;
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 .input-append.date .add-on i,
 .input-prepend.date .add-on i {
   cursor: pointer;
   width: 16px;
-  height: 16px; }
+  height: 16px;
+}
 
 .input-daterange input {
-  text-align: center; }
+  text-align: center;
+}
 
 .input-daterange input:first-child {
   -webkit-border-radius: 3px 0 0 3px;
   -moz-border-radius: 3px 0 0 3px;
-  border-radius: 3px 0 0 3px; }
+  border-radius: 3px 0 0 3px;
+}
 
 .input-daterange input:last-child {
   -webkit-border-radius: 0 3px 3px 0;
   -moz-border-radius: 0 3px 3px 0;
-  border-radius: 0 3px 3px 0; }
+  border-radius: 0 3px 3px 0;
+}
 
 .input-daterange .add-on {
   display: inline-block;
@@ -476,7 +532,8 @@
   background-color: #eeeeee;
   border: 1px solid #ccc;
   margin-left: -5px;
-  margin-right: -5px; }
+  margin-right: -5px;
+}
 
 .datepicker.dropdown-menu {
   position: absolute;
@@ -504,8 +561,12 @@
   color: #333333;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
-  line-height: 20px; }
+  line-height: 20px;
+}
 
 .datepicker.dropdown-menu th,
 .datepicker.dropdown-menu td {
-  padding: 4px 5px; }
+  padding: 4px 5px;
+}
+
+/*# sourceMappingURL=calendar.css.map */
