Removed fixed top navbar

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <!-- NAVBAR -->
 <div class="">
-    <nav class="navbar navbar-expand-lg navbar-dark unscrolled">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark unscrolled">
         <div class="container">
             <a class="navbar-brand" href="/">
                 <img src="/assets/logo_white.png"/>
