Working on registration

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -59,7 +59,9 @@
                                     <span class="font-weight-bold">first time?</span>
                                 </h2>
                                 <h2 class="text-dark m-0">
-                                    <span class="font-weight-bold -underline"><u>register now!</u></span>
+                                    <a href="/profile/register">
+                                        <span class="font-weight-bold text-dark"><u>register now!</u></span>
+                                    </a>
                                 </h2>
                             </div>
 
@@ -106,7 +108,7 @@
                                 <h3 class="text-white">
                                     Hi <span id="username"></span>!
                                 </h3>
-                                <button type="button" class="btn btn-dark rounded-pill logout" >
+                                <button type="button" class="btn btn-dark rounded-pill logout">
                                     Logout
                                 </button>
                                 <hr class="style1 border-white d-lg-none d-block">
