Refined account style

--- a/public/profile/account/scss/index.css
+++ b/public/profile/account/scss/index.css
@@ -1,9 +1,26 @@
+/*
+//background trial
+.mailbox {
+  //background-image: url("/assets/images/account_mailbox.svg");
+  background-position: bottom left;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  height: 30vw;
+} */
 .main {
   font-size: 18pt;
 }
 
 .navbar {
   background: #21263F;
+}
+
+.address-card {
+  border-radius: 24px;
+}
+
+.address-card:hover {
+  border-color: white;
 }
 
 .profile-header-placeholder {
