Homepage searchbar / Carousel arrows

--- a/public/scss/bobooky-theme.scss
+++ b/public/scss/bobooky-theme.scss
@@ -16,7 +16,7 @@ $theme-colors: (
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 .bobooky.form-control:focus {
-    border-color: white; //#F7BC5D
+   border-color: white;
 }
 
 /*
