--- a/public/scss/components/carousel.scss
+++ b/public/scss/components/carousel.scss
@@ -7,7 +7,8 @@ $ci: ".carousel-item";
 $items: 4;
 
 #{$component-name} .book {
-
+//height: 50vh;
+//object-position: top;
 }
 
 #{$component-name} .book .card-img-top {
