--- a/public/scss/index/index.scss
+++ b/public/scss/index/index.scss
@@ -67,30 +67,42 @@
 
 }
 
-.search-bar .form-control, .search-bar .btn {
-  background-color: rgba(0, 15, 55, 0.64);
+.search-bar .form-control, .search-bar .btn.round {
+  background-color: rgba(0, 15, 55, 0.4);
 }
 
 
 .search-bar .form-control {
-  border-right: hidden;
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-.search-bar .btn {
   border: 1px solid $light;
-  border-left: hidden;
+ // border-right: hidden;
+  outline: none !important;
+  box-shadow: none !important;
+  border-top-left-radius: 24px;
+  border-bottom-left-radius: 24px;
+}
+
+.search-bar .btn.round {
+  border: 1px solid $light;
+  //border-left: hidden;
+  //margin-left: 1px; //risolve il bordino blu tra label e button ma non è responsive :(
+  outline: none !important;
+  box-shadow: none !important;
+  border-top-right-radius: 24px;
+  border-bottom-right-radius: 24px;
+}
+
+.search-bar .btn.round:active {
+  background: rgba(142, 142, 142, 0.5);
+  border: 1px solid $light;
+  //border-left: hidden;
   outline: none !important;
   box-shadow: none !important;
 }
 
-.search-bar.form-control:focus {
-  box-shadow: white;
+.search-bar .form-control:focus-within {
+  //box-shadow: white;
   border-color: white;
 }
-
-
 
 .carousel-control.left {
   left: 0;
@@ -102,13 +114,15 @@
 }
 
 .carousel-control-prev {
+  //background-image: url(../images/previous-32.png);
+  filter: invert(100%);
   margin-left: -10%;
 }
 
 .carousel-control-next {
+  filter: invert(100%);
   margin-right: -10%;
 }
-
 
 .search-bar .form-control::placeholder {
   color: #d6d6d6;
