--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -118,7 +118,7 @@
                             <div class="container p-0 text-lg-center">
                                 <div class="row">
                                     <div class="col-12 col-lg py-1 py-lg-0">
-                                        <a href="#" class="text-white">My Account</a>
+                                        <a href="/profile/account" class="text-white">My Account</a>
                                     </div>
                                     <div class="col-12 col-lg py-1 py-lg-0">
                                         <a href="#" class="text-white">Orders</a>
