--- a/public/scss/components/carousel.css
+++ b/public/scss/components/carousel.css
@@ -1,12 +1,23 @@
-.multi-item-carousel .book .card-img-top {
-  width: 100%;
-  height: 50rem;
+.multi-item-carousel .card-img-top {
+  height: 90vw;
   object-fit: contain;
+  object-position: 50% 0;
 }
 @media (min-width: 768px) {
-  .multi-item-carousel .book .card-img-top {
-    height: 20rem;
+  .multi-item-carousel .card-img-top {
+    height: 18vw;
   }
+}
+
+@media (min-width: 1500px) {
+  .multi-item-carousel .card-img-top {
+    object-fit: cover;
+  }
+}
+.text-gradient {
+  background: linear-gradient(to right, #e83e8c 20%, #dc3545 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @media (min-width: 768px) {
