--- a/public/components/address/address.html
+++ b/public/components/address/address.html
@@ -1,5 +1,5 @@
 <div class="card address-card bg-dark mb-3 border border-secondary text-white w-100" style="font-size: 16px; border-width: 2px !important;">
-    <div class="card-header name">Name Surname</div>
+    <div class="card-header"><h5 class="name"> Name Surname</h5></div>
     <div class="card-body">
         <label class="col-form-label-md address_line_1">Address line 1</label>
         <label class="col-form-label-md address_line_2">Address line 2</label>
